# jabberhive-markov-k-disk

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh
src/: CMakeLists.txt  main.c  pervasive.h
src/core/: CMakeLists.txt  char.c  char.h  char_types.h  index.c  index.h  index_types.h
src/error/: error.h
src/io/: io.h  io_adjacent_sequence.c  io_database.c  io_jh_index.c  io_sequence.c  io_sequence_target.c  io_sorted_sequences.c  io_sorted_words.c  io_word.c
src/knowledge/: CMakeLists.txt  knowledge.c  knowledge.h  knowledge_adjust_search.c  knowledge_finalize.c  knowledge_get_random_sequence.c  knowledge_get_random_target.c  knowledge_learn_markov_sequence.c  knowledge_learn_sequence.c  knowledge_learn_word.c  knowledge_locks.c  knowledge_search.c  knowledge_swt_tws_modifications.c  knowledge_types.h
src/parameters/: CMakeLists.txt  parameters.c  parameters.h  parameters_types.h
src/sequence/: CMakeLists.txt  sequence.c  sequence.h  sequence_append.c  sequence_creation.c  sequence_from_string.c  sequence_to_string.c  sequence_types.h
src/server/: CMakeLists.txt  server.c  server.h  server_create_socket.c  server_finalize.c  server_initialize.c  server_new_connection.c  server_types.h  server_wait_for_event.c  server_worker.c  server_worker_handle_request.c  server_worker_receive.c  server_worker_send.c
